case 5351 - Fixed node flag selection. Fixed flags z-index issue.

--- a/css/bpi_styles.css
+++ b/css/bpi_styles.css
@@ -136,3 +136,7 @@ div.filters div.flag_filter {
 .flags_container br {
   line-height: 20px;
 }
+
+.sticky-header {
+  z-index: 600;
+}
